fixes dark-mode background gradient clipping

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -23,7 +23,7 @@ html {
     url('./img/pattern.svg'),
     linear-gradient(to bottom, rgb(103 0 255 / 4%), transparent),
     linear-gradient(to bottom left, rgb(255 0 201 / 2%), transparent);
-  background-size: 4px 4px, 100vw 200vh, 100vw 100vh;
+  background-size: 4px 4px, 100vw 200vh, 100vw 200vh;
   background-repeat: repeat, no-repeat, no-repeat;
   scroll-behavior: smooth;
 }
@@ -33,8 +33,8 @@ html[data-dark-mode="true"] {
   background-image:
     url('./img/pattern-dark.svg'),
     linear-gradient(to bottom, rgb(103 0 255 / 15%), transparent),
-    linear-gradient(to bottom left, rgb(255 0 201 / 10%), transparent);
-  background-size: 4px 4px, 100vw 200vh, 100vw 100vh;
+    linear-gradient(to bottom left, rgb(255 0 201 / 10%), transparent 50%);
+  background-size: 4px 4px, 100vw 200vh, 100vw 200vh;
   background-repeat: repeat, no-repeat, no-repeat;
 }
 
